@startuml
Class01 "1" *-- "many" Class02 : contains

Class03 o-- Class04 : aggregation

Class05 --> "1" Class06
@enduml



@startuml
Class00 "1" *-- "many" Class02 : contains

Class03 o-- Class04 : aggregation

Class05 --> "1" Class06


@enduml




@startuml

!theme plain
top to bottom direction
skinparam linetype polyline

abstract class User {
 - string firstname
 - string lastname
 - string address
 - string areacode
 - string city
 - string phone
 - string mail
}

abstract class Doctor extends User {
 - String registrationNb
 - List<Patient> patients
 + addPatient(Patient)
}


class Patient extends User{
 - String secuId
 - LocalDate birthDate 
 - HealMutual healthMutual
 - DoctorGeneral familyDoctor
 - List<DoctorSpecialized> doctorSpecializeds
}

class DoctorSpecialized extends Doctor {
 - String speciality
}


class DoctorGeneral extends Doctor {
}

class Medicament {
    - String title
    - String category
    - String[] CATEGORIES 
    - float price
    - int quantity
    - LocalDate startDate
    - bool needPrescription
    + getAmount()
}

class Prescription{
    - LocalDate date 
    - Patient patient 
    - Doctor doctor 
    - float priceWithoutMutual
    - float priceWithMutual
    - List<Medicament> medicaments
}

class Purchase{
    - String ID
    - LocalDatetime datetime 
    - List<Medicament> medicaments
    - Prescription prescription
    - bool isPaid()
    + addMedicament()
    + getTotalWithMutualAmount()
    + getTotalWithoutMutualAmount()
}

class HealthMutual{
  - String title
  - String address
  - String areaCode
  - String city
  - String phone
  - String mail
  - String state
  - float healthCar
}

class Pharmacy{
  - Purchase currentPurchase
  - List<Purchase> purchases
  - List<Patient> patients
  - List<Doctor> doctors
  - List<DoctorGeneral> doctorGenerals
  - List<DoctorSpecialized> doctorSpecializeds
  - List<Medicament> medicaments
  - List<HealthMutual> healthMutuals
  + addDoctorSpecialized(DoctorSpecialized)
  + addDoctorGeneral(DoctorGeneral)
  + addPatient(Patient)
  + addCurrentPuchase()
}


Prescription::medicamentList "1" *-- "many" Medicament  
Prescription::doctor "1" *-- "1" Doctor  
Prescription::patient "1" *-- "1" Patient
Patient::healthMutual "0" *-- "1" HealthMutual
Patient::familyDoctor "0" *-- "1" DoctorGeneral
Patient::doctorSpecializeds "0" *-- "*" DoctorSpecialized


Pharmacy::doctors "0" *-- "*" Doctor
Pharmacy::patients "0" *-- "*" Patient
Pharmacy::medicaments "0" *-- "*" Medicament
Pharmacy::healthMutuals "0" *-- "*" HealthMutual

Purchase::medicaments "1" *-- "*" Medicament
Purchase::prescription "1" *-- "*" Prescription

@enduml



@startuml
class Machin {
 -champ1
 #champ2
 ~methode1()
 +methode2()
}



@enduml


@startwbs
* Sparadrap
** Effectuer un achat
*** Achat direct
*** Achat via ordonnance
** historique des achats
*** liste des achats de la journee ou une journee specifique
*** modification possible
** detail medecin / specialiste
*** liste deroulante medecin
** detail client
*** liste deroulante client
*** crud
@endwbs